# is-it-down

./: .gitignore  LICENSE  README.md  config.yml  data.txt  database-tools.py  docker-compose.yml  entrypoint.sh  main.py  manifest.yml  nginx.local.conf  requirements.txt  scrap.py  setup.py  uaa.yml  web.Dockerfile  worker.py
app/: config.py  database.py
app/models/: server.py  user.py
app/pages/: __init__.py  admin.md  index.md  techstack.md
app/routes/: __init__.py  admin.py  auth.py  debug.py  default.py  profile.py
app/routes/server/: __init__.py
app/static/: github.pygment.css
app/templates/: base.html  catagories.html  error.html  footer.html  log.html  navbar.html  page.html  server.html
app/templates/admin/: catagories.html  organizations.html
app/templates/main/: catagories.html  server.html  servers.html
app/templates/modals/: profile.html
app/templates/uswds/: banner.html
app/utils/: __init__.py  decorators.py
data/: README.md  data.txt  scrap.py  short.csv
docs/: README.md  getting-started.md
setup/: create_catagories.sql
src/api/: main.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.tsx  index.css  index.tsx
src/frontend/src/theme/: light.ts
tests/: test_auth.py  test_flask.py
tests/fixtures/: __init__.py
worker/: entrypoint.sh  main.py  worker.Dockerfile  worker.py
worker/mysql/: Cargo.toml
worker/mysql/src/: main.rs
worker/server_log/: Cargo.toml
worker/server_log/src/: main.rs  models.rs  schema.rs
worker/sqlx/: Cargo.toml
worker/sqlx/src/: main.rs
(+1 files in other folders)
