[package]
name = "server_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sqlx = { version = "*", features = [ "runtime-tokio-native-tls" , "mysql", "chrono" ] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }